--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,13 @@
     }
 
     #pacman {
-      
+
     }
     </style> 
 
 </head>
 
   <body>
-    Hello Pacman!
+    <img id="pacman" src="/I/Coding Projects/assets/images/pacman.svg">
   </body>
 </html>
