--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,6 @@
 </head>
 
   <body>
-    <img id="pacman" src="/I/Coding Projects/assets/images/Pacman.svg">
+    <img id="pacman" src="../assets/images/Pacman.svg">
   </body>
 </html>
