--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,6 @@
   <head>
     <title>Pacman</title>
 
-    <script type="text/javascript">
-    
-    </script>
     <style>
     
     html, body {
@@ -34,5 +31,13 @@
 
   <body>
     <img id="pacman" src="../assets/images/Pacman.svg">
+
+    <script type="text/javascript">
+      var pacmanElement = document.getElementById('pacman')
+      if (!pacmanElement)
+        console.log('I am here!');
+          throw new Error('Cannot find element!');
+    </script>
+
   </body>
 </html>
