--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <img id="pacman" src="../assets/images/Pacman.svg">
 
     <script type="text/javascript">
-      var pacmanElement = document.getElementById('pacman')
+      var pacmanElement = document.getElementById('pacman');
       if (!pacmanElement)
         console.log('I am here!');
           throw new Error('Cannot find element!');
